# function_composition

./: .clang-format  .gitignore  README.md
example/: CMakeLists.txt  source.cpp
header/: composition_function.hpp  composition_helper.hpp
